# django-musicbrainz-connector

./: README.md  conftest.py  pyproject.toml  setup.cfg
.github/workflows/: django.yml
django_musicbrainz_connector/models/: __init__.py  artist.py  link_attribute.py  link_attribute_text_value.py  link_attribute_type.py  link_text_attribute_type.py  link_type.py  work.py  work_type.py
docs/: changelog.rst  index.rst  link_attribute_type.rst  requirements.txt  work.rst
docs/includes/: area-types.md  artist-types.md  genders.md  link-attribute-types.md  work-types.md
