[build-system]
requires = ["setuptools>=75.0", "build"]
build-backend = 'setuptools.build_meta'

[project]
name = "django-musicbrainz-connector"
version = "0.0.8"
dependencies = [
    "django",
    "djangorestframework",
    "psycopg",
]

[dependency-groups]
# `pip` supports `dependency-groups` from version 25.1. Usage:
#
#   pip install --group docs
#   pip install --group test
#
# References:
#
#   https://github.com/pypa/pip/issues/12963
#   https://github.com/pypa/pip/pull/13065
#
# You only need test dependencies if you are running unit tests:
test = [
    "flake8",
    "black",
    "isort",
    "bandit",
    "coverage",
    "pytest",
    "pytest-django",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "django",
    "djangorestframework",
    "myst-parser",
]

[tool.black]
line-length = 120

[tool.isort]
multi_line_output = 3  # https://pycqa.github.io/isort/docs/configuration/options.html#multi-line-output
include_trailing_comma = true  # require trailing comma at the end of a list of imports in parentheses
line_length = 120  # https://pycqa.github.io/isort/docs/configuration/options.html#line-length

[tool.bandit]
assert_used = { skips = [ "*/test_*.py" ] } # Allow `assert` to be used in tests
